--- a/asset/css/projects.css
+++ b/asset/css/projects.css
@@ -56,23 +56,57 @@
 	justify-content: flex-start;
 }
 
+
+.img-container{
+	position: relative;
+	margin: 1rem;
+}
+.img-container>img{
+	position: relative;
+	top: 0%;
+	left: 0%;
+}
+.label:hover{
+	opacity: 90%;
+}
+.label{
+	display: none;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: black;
+	opacity: 0%;
+	color: white;
+	z-index: 10;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	transition: 0.3s ease-in-out;
+}
+.label>p{
+	margin: 2rem;
+	cursor: default;
+	text-align: center;
+	transition: 0.3s ease-in-out;
+}
+
+
 .thumbnail{
 	width: 16.5rem;
-	margin: 2%;
 	height: 10rem;
 	overflow: hidden;
 	transition: 0.3s ease-in-out;
 }
 .thumbnail-1{
 	width: 16rem;
-	margin: 2%;
 	height: 12rem;
 	overflow: hidden;
 	transition: 0.3s ease-in-out;
 }
 
 .thumbnail-2{
-	margin: 2%;
 	height: 12rem;
 	overflow: hidden;
 	transition: 0.3s ease-in-out;
