--- a/asset/css/sidebar.css
+++ b/asset/css/sidebar.css
@@ -131,8 +131,14 @@ div.content {
   margin-bottom: 0;
 }
 .mt-1{
-  margin-top: 1rem;
+  margin-top: 1rem!important;
+}
+.mt-2{
+  margin-top: 2rem!important;
+}
+.mt-05{
+  margin-top: 0.5rem!important;
 }
 .mb-2{
-  margin-bottom: 2rem;
+  margin-bottom: 2rem!important;
 }
