--- a/FAQ/styles.css
+++ b/FAQ/styles.css
@@ -10,7 +10,7 @@ body {
 
 .search-container {
   /*display: block;*/
-  background-color: #1E90FF;
+  background-color: #87B8E3;
   position: relative;
   width: 100%;
   padding: 1rem;
@@ -58,18 +58,20 @@ body {
 
 #topnav {
   overflow: hidden;
-  background-color: #1E90FF;
+  background-color: #87B8E3;
 }
 
 #topnav a {
   float: left;
   display: block;
-  color: #D9D9D9;
+  color: #E3E3E3;
   text-align: center;
   padding: 0.9rem 1rem;
   margin: 0 0.7rem;
   text-decoration: none;
   font-size: 1.2rem;
+  cursor: pointer;
+  text-transform: uppercase;
 }
 
 #topnav a:not(.active-nav):hover {
@@ -110,21 +112,22 @@ body {
 
 .content{
   padding: 16px;
-  background-color: #F3F3F3;
+  background-color: #CFEEFF;
 }
 .faq-section{
   padding: 1.5rem 0;
 }
 .section-header{
   font-size: 2rem;
-  color: #666666;
+  color: #E68782;
   font-family: "Times New Roman", Times, serif;
+  text-transform: uppercase;
   text-align: center;
 }
 
 .faq-qna{
   margin: 0 8%;
-  padding: 0;
+  padding: 0 0.5rem;
   border-bottom: 0.1rem dashed #000;
 }
 
@@ -145,6 +148,7 @@ body {
   font-size: 1.2rem;
   transition: 0.4s;
   font-family: 'Poppins', sans-serif;
+  background: none;
 }
 .accordion>p{
   padding: 0;
