--- a/quiz/styles.css
+++ b/quiz/styles.css
@@ -13,15 +13,20 @@ html, body {
   position: relative;
   width: 100%;
   height: 100%;
+  background-color: #CAD2C5;
 }
 #quiz-content{
   position: relative;
   width: 100%;
 }
 #tracker-section{
-  position: relative;
+  position: sticky;
   width: 100%;
-  height: auto;
+  top: 90%;
+  height: 10%;
+  background-color: #69A297;
+  padding: 0;
+  overflow-y: hidden;
 }
 
 #instruction-page{
@@ -46,28 +51,32 @@ html, body {
 }
 
 .instruction-text{
-  border: 0.2rem solid #555;
-  background-color: #95C8D9;
+  border: 0.2rem solid #354F52;
+  background-color: #84A98C;
   font-family: 'Calibri', sans-serif;
   margin: 2% 0;
   font-size: 1.6rem;
   padding: 2% 4%;
 }
+
+.enter-quiz, .next-question{
+  border: none;
+  border-radius: 0.4rem;
+  background-color: #354F52;
+  font-family: 'Calibri', sans-serif;
+}
+
 .enter-quiz{
   cursor: pointer;
   position: relative;
   width: 10rem;
-  border: none;
-  border-radius: 0.4rem;
-  background-color: #0F52BA;
-  font-family: 'Calibri', sans-serif;
   margin: 2% 0;
   padding: 0.5rem 0;
   font-size: 1.5rem;
   color: white;
 }
 .enter-quiz:hover{
-  background-color: yellow;
+  filter: brightness(150%);
 }
 
 
@@ -83,7 +92,7 @@ html, body {
   width: 100%;
   font-size: 2.4rem;
   font-family: 'Calibri', sans-serif;
-  color: #003152;
+  color: #2F3E46;
   border-bottom: 1px solid #555;
 }
 .question-block{
@@ -101,30 +110,34 @@ html, body {
 }
 #answer-block{
   display: flex;
-  justify-content: space-between;
-  flex-direction: column;
+  justify-content: flex-start;
+  flex-direction: row;
   margin: 1rem 5%;
   font-size: 1.2rem;
   width: 90%;
+  flex-flow: wrap;
 }
+
 .answer-option{
   cursor: pointer;
+  width: 40%;
+  margin: 1% 2.5%;
 }
 .answer-option:hover{
-  background-color: yellow;
+  filter: brightness(125%);
 }
 
 .answer-text{
-  background-color: #B0DFE5;
-  padding: 0.5rem;
-  margin: 0.5rem;
+  background-color: #52796F;
+  color: #FFF;
+  padding: 0.75rem;
   border-radius: 4px;
 }
 
 .explanation-text{
   display: none;
-  border: 0.2rem solid #555;
-  background-color: #95C8D9;
+  border: 0.2rem solid #354F52;
+  background-color: #84A98C;
   font-family: 'Calibri', sans-serif;
   margin: 2% 0;
   font-size: 1.3rem;
@@ -137,40 +150,46 @@ html, body {
   position: relative;
   left: 85%;
   width: auto;
-  border: none;
-  border-radius: 0.4rem;
-  background-color: #0F52BA;
-  font-family: 'Calibri', sans-serif;
   margin: 2% 0;
   padding: 0.5rem 1.5rem;
   font-size: 1.5rem;
   color: white;
 }
 .next-question:hover{
-  background-color: yellow;
+  filter: brightness(125%);
 }
 
 
 #questions-tracker{
-  position: relative;
+  position: absolute;
   width: 90%;
+  height: 100%;
   left: 5%;
   margin: 0;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   flex-flow: row wrap;
+  padding: 0;
   align-items: center;
 }
 .question-track-item{
   position: relative;
-  margin: 0.5rem;
-  width: 2.5rem;
-  height: 2.5rem;
-  border-radius: 50%;
-  background-color: #888;
+  margin: 0;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /*width: 2.5rem;*/
+  font-size: 1.5rem;
+  color: white;
+}
+.question-track-item>p{
+  text-align: center;
+  padding: 0.3rem 1.5rem;
 }
 .active-tracker{
-  background-color: blue;
+  background-color: #F0F3BD;
+  color: black;
 }
 /*
   font-family: 'Calibri', sans-serif;
