--- a/quiz/styles.css
+++ b/quiz/styles.css
@@ -14,10 +14,6 @@ html, body {
   position: relative;
   width: 100%;
   height: 100%;
-  background-color: #FBF9D2;
-  background-size: 100% auto;
-  background-repeat: no-repeat;
-  background-position: center;
 }
 #quiz-content{
   position: relative;
@@ -39,6 +35,10 @@ html, body {
   border-bottom: 0.2rem solid #0BCBB0;
 }
 .covid-img{
+  background-size: 100% auto;
+  background-repeat: no-repeat;
+  background-position: center;
+  opacity: 0.7;
   background-image: url('https://res.cloudinary.com/sandeepsthapit/image/upload/v1595579929/Website/covid-quiz-bg.png');
 }
 
@@ -148,11 +148,11 @@ html, body {
 }
 .answer-option:hover{
   background-color: #FFD600;
-  border: none;
+  border-color: #FFD600;
 }
 
 .answer-text{
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.7);
   color: #333;
   border: 1px solid #26D1B9;
   padding: 0.75rem;
@@ -195,7 +195,7 @@ html, body {
   /*filter: brightness(125%);*/
 
   background-color: #FFD600;
-  border: none;
+  border-color: #FFD600;
 }
 
 
@@ -241,7 +241,10 @@ html, body {
   left: 0;
   width: 100%;
   height: 100%;
-  padding: 5%;
+  padding: 2%;
+}
+.score-bg-img{
+  opacity: 0.7;
   background-position: center;
   background-image: url('https://res.cloudinary.com/sandeepsthapit/image/upload/v1595583289/Website/badge-bg.png');
 }
@@ -251,6 +254,7 @@ html, body {
   font-family: 'Arvo', serif;
   font-weight: bold;
   color: #111;
+  margin: 0.5rem;
 }
 
 .badge-text{
@@ -286,29 +290,53 @@ html, body {
   font-family: 'Didact Gothic', sans-serif;
   color: #2F3E46;
 }
+.character-desc{
+  position: relative;
+  border: 0.1rem solid #FFD600;
+  border-radius: 0.5rem; 
+  background-color: #FBF9D2;
+  left: 50%;
+  width: 60vh;
+  transform: translateX(-50%);
+  font-size: 1.3rem;
+  margin-top: 0.5rem;
+  font-family: 'Didact Gothic', sans-serif;
+  font-style: italic;
+  text-align: center;
+  padding: 0.5rem;
+}
 #share-button{
   cursor: pointer;
-  position: relative;
+  position: absolute;
   text-decoration: underline;
   color: #DA36A2;
   font-family: 'Didact Gothic', sans-serif;
-  left: 50%;
-  transform: translateX(-50%);
+  left: 75%;
+  /* transform: translateX(-50%); */
   width: auto;
   margin: 1rem 0;
-  font-size: 1.8rem;
+  font-size: 2rem;
   display: flex;
   justify-content: center;
+  font-weight: bold;
+  bottom: 10%;
 }
 #share-button a{
   color: #DA36A2 !important;
 }
 #share-button a:hover{
   color: #FFD600;
+  border-color: #FFD600;
 }
 .hl-num{
   color: #DA36A2;
   font-size: 3.5rem;
+}
+
+.bg-image{
+  position: absolute;
+  width: 100%;
+  height: 100%;  
 }
 /*
   font-family: 'Calibri', sans-serif;
