--- a/quiz/styles.css
+++ b/quiz/styles.css
@@ -247,6 +247,7 @@ html, body {
   opacity: 0.7;
   background-position: center;
   background-image: url('https://res.cloudinary.com/sandeepsthapit/image/upload/v1595583289/Website/badge-bg.png');
+  opacity: 0.5;
 }
 .score-text{
   text-align: center;
@@ -269,7 +270,7 @@ html, body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  border: 0.1rem solid #FFD600;
+  border: 3px solid #FFD600;
   border-radius: 0.5rem; 
   background-color: #FBF9D2;
   left: 50%;
@@ -286,7 +287,7 @@ html, body {
   position: relative;
   text-align: center;
   font-size: 1.6rem;
-  margin-top: 0.5rem;
+  margin-top: 1rem;
   font-family: 'Didact Gothic', sans-serif;
   color: #2F3E46;
 }
@@ -303,7 +304,7 @@ html, body {
   font-family: 'Didact Gothic', sans-serif;
   font-style: italic;
   text-align: center;
-  padding: 0.5rem;
+  padding: 1rem;
 }
 #share-button{
   cursor: pointer;
